--- a/src/styles.css
+++ b/src/styles.css
@@ -75,3 +75,25 @@ img {
 .weather-temperature .units .active:hover{
   cursor:default;
 }
+
+.weather-forecast{
+  text-align:center;
+}
+
+.weather-temperature-date{
+  font-size:16px;  
+  opacity:0.6;
+  margin-top:20px;
+}
+
+.icon-day{
+  text-align:center;
+}
+.weather-range{
+  font-size:13px;
+}
+
+
+.weather-temperature-min{
+  opacity:0.6;
+}
